# google-gemma-samples-ja

./: README.md  pyproject.toml
samples/01/: gemma-2b-gpu-japanese.py  gemma-2b-gpu.py  gemma-2b-japanese.py  gemma-2b.py
samples/02/: gemma-2b-it-gpu-japanese.py  gemma-2b-it-gpu.py  gemma-2b-it-japanese.py  gemma-2b-it.py
samples/03/: gemma-2b-it-chat-template-gpu-japanese.py  gemma-2b-it-chat-template-gpu.py  gemma-2b-it-chat-template-japanese.py  gemma-2b-it-chat-template.py
samples/04/: gemma-7b-it-gpu.py  gemma-7b-it-pipeline.py  gemma-7b-it.py
