[tool.poetry]
name = "google-gemma-samples-ja"
version = "0.1.0"
description = "Google の Gemma モデルのサンプル集"
authors = ["Goto Hayato <gh640@hey.com>"]
readme = "README.md"

# `package-mode` should work once Poetry 1.8.0 has been released.
# package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.38.1"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
